k8s/base/back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: back
  name: back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: back
    spec:
      containers:
        - args:
            - yarn
            - run
            - runprod
          image: ghcr.io/workadventure-suse/workadventure-back:hackweek-prep
          name: back
          resources: {}
      restartPolicy: Always
status: {}
