k8s/base/pusher-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: pusher
  name: pusher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pusher
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pusher
    spec:
      containers:
        - args:
            - yarn
            - run
            - runprod
          image: ghcr.io/workadventure-suse/workadventure-pusher:hackweek-prep
          name: pusher
          resources: {}
      restartPolicy: Always
status: {}
