k8s/base/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: back
  labels:
    app: back
spec:
  ports:
  - port: 8080
    protocol: TCP
    name: web1
  - port: 50051
    protocol: TCP
    name: web2
  selector:
    app: back
---
apiVersion: v1
kind: Service
metadata:
  name: front
  labels:
    app: front
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: front
---
apiVersion: v1
kind: Service
metadata:
  name: pusher
  labels:
    app: pusher
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: pusher
---
apiVersion: v1
kind: Service
metadata:
  name: uploader
  labels:
    app: uploader
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: uploader
